Chapter 1 - Getting Started

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="form-horizontal" id="nameform">
         <div class="form-group">
-            <label for="playerName" class="col-sm-2 control-label">Player Name</label>
+            <label for="playername" class="col-sm-2 control-label">Player Name</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="playerName" placeholder="Name">
+                <input type="text" class="form-control" id="playername" placeholder="Name">
             </div>
             <div class="col-sm-2">
                 <button type="button" class="btn btn-primary btn-sm" id="showNumbers">Show Numbers</button>
@@ -46,8 +46,8 @@
 
     <div class="form-horizontal" id="mathGame"></div>
         
-    <div class="col-sm-offset-2 col-sm-6">
-        <h2>Scoreboard: <small id="playerScore">No Scores Yet</small> </h2>
+    <div class="col-sm-offset-2 col-sm-6" id="scores">
+        <h2>Scoreboard: <small>No Scores Yet</small> </h2>
     </div>
 
     <div class="col-sm-offset-2 col-sm-10" id="message"></div>
