--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="col-sm-offset-2 col-sm-10" id="message"></div>
     
     <!-- add script tags here -->
-    <script src="bundle.js"></script>
+    <script src="./js/bundle.js"></script>
     
 </body>
 </html>
